# tradingbot-public-mirror

./: .coverage  .env.example  .gitignore  .gitleaks.toml  Dockerfile  Makefile  README.md  docker-compose.yml  mypi.ini  pyproject.toml  requirements-dev.txt  requirements.txt  secrets_test.txt
.venv~/: pyvenv.cfg
docs/: chatgpt.md
docs/architecture/: architecture.md  ci-cd.md  components.md  functional-requirements.md  requirements.md
docs/decisions/: ADR-001-storage.md  ADR-002-ingestion-strategy.md
infra/: core-rg.bicep  dev.bicepparam  main.bicep
infra/pipelines/: azure-pipelines.yml
src/backfill/: backfill_job.py
src/common/: config.py  db.py  secrets_test.txt
src/core/: __init__.py  composition.py  db.py
src/core/models/: __init__.py  candle.py  enums.py  instrument.py  money.py  timeframe.py
src/ingestion/: daily_update.py
src/market_data/infrastructure/: fake_source.py  memory_store.py
src/market_data/ingestion/: ingest_market_data.py
src/market_data/ports/: __init__.py  query.py  source.py  store.py
src/strategy_analysis/domain/: strategy_spec.py
src/strategy_analysis/domain/application/: backtest.py
src/trading/ports/: broker.py
tests/: test_db_url.py  test_ingest_market_data.py  test_market_data_store.py
