[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "mypy",
  "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
core = ["py.typed"]
market_data = ["py.typed"]
strategy_analysis = ["py.typed"]
trading = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
strict = true
warn_unused_configs = true
check_untyped_defs = true
warn_unreachable = true
show_error_codes = true
pretty = true

# --- Your existing ruff config (kept as-is) ---
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"